added a section and fixed a spelling error in courses

--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@
             
             <h1>WestCoast Education</h1>
         </header>
-
-        <div id="container"></div>
+        <section id="container">
+            <div id="courseGallery"></div>
+        </section>
     </main>
 </body>
 
