--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Westcoas Education</title>
-    <script src="courses.js"></script>
+    <script src="/scripts/gallery.js" type="module" defer></script>
 
 </head>
 
@@ -15,11 +15,11 @@
             <nav>
 
             </nav>
-            
+
             <h1>WestCoast Education</h1>
         </header>
         <section id="container">
-            <div id="courseGallery"></div>
+            <div id="courseGallery" class="imageGallery"></div>
         </section>
     </main>
 </body>
