Trying to get my images to show up

--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
             <h1>WestCoast Education</h1>
         </header>
         <section id="container">
-            <div id="courseGallery" class="imageGallery"></div>
+            <div id="courseGallery" class="imageGallery">
+            </div>
         </section>
     </main>
 </body>
