--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Westcoas Education</title>
+    <link rel="stylesheet" href="/css/main.css">
     <script src="/scripts/gallery.js" type="module" defer></script>
 
 </head>
