Added a UL element to the header

--- a/index.html
+++ b/index.html
@@ -14,9 +14,13 @@
     <main>
         <header>
             <nav>
-
+                <ul>
+                    <li>Courses</li>
+                    <li>About us</li>
+                    <li>Log in</li>
+                </ul>
             </nav>
-
+            
             <h1>WestCoast Education</h1>
         </header>
         <section id="container">
