Fixed so that my formData shows when book course button is pressed, minor visual text improvements made

--- a/index.html
+++ b/index.html
@@ -12,16 +12,16 @@
 
 <body>
     <main>
-        <header>
-            <nav>
-                <ul>
+        <header class="header">
+            <nav class="menu">
+                <ul class="menu-buttons">
                     <li>Courses</li>
                     <li>About us</li>
                     <li>Log in</li>
                 </ul>
             </nav>
             
-            <h1>WestCoast Education</h1>
+            <h1 class="title">WestCoast Education</h1>
         </header>
         <section id="container">
             <div id="courseGallery" class="imageGallery">
