--- a/addUser.html
+++ b/addUser.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Westcoast Education</title>
+    <title>Westcoas Education</title>
     <link rel="stylesheet" href="/css/main.css">
     <script src="/scripts/gallery.js" type="module" defer></script>
 
@@ -12,16 +12,16 @@
 
 <body>
     <main>
-        <header>
-            <nav>
-                <ul>
+        <header class="header">
+            <nav class="menu">
+                <ul class="menu-buttons">
                     <li>Courses</li>
                     <li>About us</li>
                     <li>Log in</li>
                 </ul>
             </nav>
             
-            <h1>Ready to start an adventure you wont forget?</h1>
+            <h1 class="title">Please proceed to type in your</h1>
         </header>
         <section id="container">
             <div id="courseGallery" class="imageGallery">
