--- a/addUser.html
+++ b/addUser.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Westcoas Education</title>
     <link rel="stylesheet" href="/css/main.css">
-    <script src="/scripts/gallery.js" type="module" defer></script>
+    <script src="/scripts/main.js" type="module" defer></script>
 
 </head>
 
