added a changeurl file that got a function to allow users to navigate easily throughout my project

--- a/addUser.html
+++ b/addUser.html
@@ -16,13 +16,12 @@
         <header class="header">
             <nav class="menu">
                 <ul class="menu-buttons">
-                    <li>Courses</li>
-                    <li>About us</li>
-                    <li>Log in</li>
+                    <li id="homePage">Home</li>
+                    <li id="adminPage">Admin</li>
                 </ul>
             </nav>
             
-            <h1 class="title">Please proceed to type in your</h1>
+            <h1 class="title" id="headerHome">WestCoast Education</h1>
         </header>
         <section id="container">
         </section>
