--- a/index.html
+++ b/index.html
@@ -15,13 +15,12 @@
         <header class="header">
             <nav class="menu">
                 <ul class="menu-buttons">
-                    <li>Courses</li>
-                    <li>About us</li>
-                    <li>Log in</li>
+                    <li id="homePage">Home</li>
+                    <li id="adminPage">Admin</li>
                 </ul>
             </nav>
             
-            <h1 class="title">WestCoast Education</h1>
+            <h1 class="title" id="headerHome">WestCoast Education</h1>
         </header>
         <section id="container">
             <div id="courseGallery" class="imageGallery">
