Added functionality  to show current students

--- a/adminCourses.html
+++ b/adminCourses.html
@@ -23,7 +23,9 @@
             
             <h1 class="title" id="headerHome">WestCoast Education</h1>
         </header>
-        <section id="studentContainer">
+        <section id="container">
+            <div id="courseGallery" class="imageGallery">
+            </div>
         </section>
     </main>
 </body>
