--- a/addUser.html
+++ b/addUser.html
@@ -18,6 +18,7 @@
                 <ul class="menu-buttons">
                     <li id="homePage">Home</li>
                     <li id="adminPage">Admin</li>
+                    <li id="adminStudentView">Admin-Studentview</li>
                 </ul>
             </nav>
             
