--- a/src/addUser.html
+++ b/src/addUser.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Westcoas Education</title>
-    <link rel="stylesheet" href="/css/main.css">
-    <script src="/scripts/main.js" type="module" defer></script>
+    <link rel="stylesheet" href="./css/main.css">
+    <script src="./scripts/newCourse.js" type="module" defer></script>
 
 
 </head>
