--- a/src/adminCourses.html
+++ b/src/adminCourses.html
@@ -4,10 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Westcoas Education</title>
-    <link rel="stylesheet" href="/css/main.css">
-    <script src="/scripts/loadStudent.js" type="module" defer></script>
-    <script type="module" src="/scripts/findStudent.js" defer></script>
+    <title>Westcoast Education</title>
+    <link rel="stylesheet" href="./css/main.css">
+    <script src="./scripts/loadStudent.js" type="module" defer></script>
+    <script type="module" src="./scripts/findStudent.js" defer></script>
 
 
 </head>
