Made my list Students and search function into TypeScript, also added manual navigation in the html, Cleaned up my code a little bit

--- a/src/adminCourses.html
+++ b/src/adminCourses.html
@@ -6,8 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Westcoast Education</title>
     <link rel="stylesheet" href="./css/main.css">
-    <script src="./scripts/loadStudent.js" type="module" defer></script>
-    <script type="module" src="./scripts/findStudent.js" defer></script>
+    <script type="module" src="../dist/loadStudents/loadStudents.js"></script>
 
 
 </head>
@@ -17,14 +16,14 @@
         <header class="header">
             <nav class="menu">
                 <ul class="menu-buttons">
-                    <li id="homePage">Home</li>
-                    <li id="adminPage">Admin</li>
-                    <li id="adminStudentView">Admin-Studentview</li>
+                    <li id="homePage" ><a href="index.html">Home</a></li>
+                    <li id="adminPage" ><a href="addUser.html">Admin</a></li>
+                    <li id="adminStudentView" ><a href="adminCourses.html">Admin-Studentview</a></li>
                 </ul>
 
             </nav>
 
-            <h1 class="title" id="headerHome">WestCoast Education</h1>
+            <h1 class="title" id="headerHome"><a href="adminCourses.html">WestCoast Education</a></h1>
         </header>
         <section>
             <form id="searchForm">
