working on my css, trying to find fitting background colors.

--- a/src/adminCourses.html
+++ b/src/adminCourses.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <main>
+    <main class="backgroundpic">
         <header class="header">
             <nav class="menu">
                 <ul class="menu-buttons">
@@ -23,7 +23,7 @@
 
             </nav>
 
-            <h1 class="title" id="headerHome"><a href="adminCourses.html">WestCoast Education</a></h1>
+            <h1 class="title" id="headerHome"><a href="index.html">WestCoast Education</a></h1>
         </header>
         <section>
             <form id="searchForm">
