--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <main>
+    <main class="backgroundpic">
         <header class="header">
             <nav class="menu">
                 <ul class="menu-buttons">
