Worked on making only 1 form appear at a time, cancel button added, improved css, fixed my file structure, cleaned up my JS code and TS and CSS code

--- a/src/adminCourses.html
+++ b/src/adminCourses.html
@@ -26,10 +26,9 @@
             <h1 class="title" id="headerHome"><a href="index.html">WestCoast Education</a></h1>
         </header>
         <section>
-            <form id="searchForm">
-                <label for="courseTitle">Search by Course Title:</label>
-                <input type="text" id="courseTitle" name="courseTitle" placeholder="Enter course title" required>
-                <button type="submit">Search</button>
+            <form id="searchForm" class="searchForm">
+                <input type="text" id="courseTitle" name="courseTitle" placeholder="Search by entering the course of your choice" required>
+                <button type="submit" class="bookButton">Search</button>
             </form>
         </section>
 
