Formatted my code, added alt attributes to all my images, cleaned a bit more in my JS code

--- a/src/adminCourses.html
+++ b/src/adminCourses.html
@@ -16,9 +16,9 @@
         <header class="header">
             <nav class="menu">
                 <ul class="menu-buttons">
-                    <li id="homePage" ><a href="index.html">Home</a></li>
-                    <li id="adminPage" ><a href="addUser.html">Admin</a></li>
-                    <li id="adminStudentView" ><a href="adminCourses.html">Admin-Studentview</a></li>
+                    <li id="homePage"><a href="index.html">Home</a></li>
+                    <li id="adminPage"><a href="addUser.html">Admin</a></li>
+                    <li id="adminStudentView"><a href="adminCourses.html">Admin-Studentview</a></li>
                 </ul>
 
             </nav>
@@ -27,7 +27,8 @@
         </header>
         <section>
             <form id="searchForm" class="searchForm">
-                <input type="text" id="courseTitle" name="courseTitle" placeholder="Search by entering the course of your choice" required>
+                <input type="text" id="courseTitle" name="courseTitle"
+                    placeholder="Search by entering the course of your choice" required>
                 <button type="submit" class="bookButton">Search</button>
             </form>
         </section>
@@ -37,7 +38,7 @@
             </div>
         </section>
         <section>
-        
+
         </section>
     </main>
 </body>
